# dumbo

./: .gitignore  CMakeLists.txt  README.md  dumbo.kdev4  main.cpp  mkvc-build.bat-template
include/dumbo/v1/disruptor/: claim_strategy.h  event_processor.h  ring_buffer.h  sequence.h  sequence_barrier.h  sequencer.h  wait_strategy.h
include/dumbo/v1/fiber/: all.hpp  barrier.hpp  bounded_channel.hpp  buffered_channel.hpp  channel_op_status.hpp  condition_variable.hpp  context.hpp  exceptions.hpp  fiber.hpp  fixedsize_stack.hpp  fss.hpp  future.hpp  mutex.hpp  operations.hpp  policy.hpp  pooled_fixedsize_stack.hpp  properties.hpp  protected_fixedsize_stack.hpp  recursive_mutex.hpp  recursive_timed_mutex.hpp  scheduler.hpp  segmented_stack.hpp  timed_mutex.hpp  type.hpp  unbounded_channel.hpp  unbuffered_channel.hpp
include/dumbo/v1/fiber/algo/: algorithm.hpp  round_robin.hpp  shared_work.hpp  work_stealing.hpp
include/dumbo/v1/fiber/algo/detail/: chase_lev_queue.hpp
include/dumbo/v1/fiber/detail/: config.hpp  context_mpsc_queue.hpp  context_spmc_queue.hpp  convert.hpp  cpu_relax.hpp  data.hpp  decay_copy.hpp  disable_overload.hpp  fss.hpp  futex.hpp  spinlock.hpp  spinlock_ttas.hpp  spinlock_ttas_adaptive.hpp  spinlock_ttas_adaptive_futex.hpp  spinlock_ttas_futex.hpp  wrap.hpp
include/dumbo/v1/fiber/future/: async.hpp  future.hpp  future_status.hpp  packaged_task.hpp  promise.hpp
include/dumbo/v1/fiber/future/detail/: shared_state.hpp  shared_state_object.hpp  task_base.hpp  task_object.hpp
include/dumbo/v1/reactor/: application.hpp  file.hpp  mpsc_queue.hpp  reactor.hpp  ring_buffer.hpp  scheduler.hpp  smp_base.hpp  socket.hpp  thread_pool.hpp
include/dumbo/v1/reactor/linux/: buffer_vec.hpp  file_impl.hpp  io_poller.hpp  smp.hpp  socket_impl.hpp
include/dumbo/v1/reactor/message/: app_message.hpp  fiber_io_message.hpp  fiber_lambda_message.hpp  fiber_message.hpp  function_message.hpp  lambda_message.hpp  message.hpp
include/dumbo/v1/reactor/msvc/: msvc_buffer_vec.hpp  msvc_file_impl.hpp  msvc_io_poller.hpp  msvc_smp.hpp  msvc_socket_impl.hpp
include/dumbo/v1/tools/: bzero_struct.hpp  latch.hpp  perror.hpp  ptr_cast.hpp  string_buffer.hpp
src/: CMakeLists.txt  barrier.cpp  context.cpp  future.cpp  mutex.cpp  recursive_timed_mutex.cpp  scheduler.cpp
src/algo/: algorithm.cpp
src/fiber/: condition_variable.cpp  context.cpp  fiber.cpp  properties.cpp  recursive_mutex.cpp  scheduler.cpp  timed_mutex.cpp
src/fiber/algo/: round_robin.cpp  shared_work.cpp  work_stealing.cpp
src/reactor/: CMakeLists.txt  application.cpp  message.cpp  reactor.cpp  smp.cpp  thread_pool.cpp
src/reactor/linux/: file_impl.cpp  io_poller.cpp  ip_address.cpp  socket_impl.cpp
src/reactor/msvc/: msvc_file_impl.cpp  msvc_io_poller.cpp  msvc_ip_address.cpp  msvc_socket_impl.cpp
tests/: test_async_dispatch.cpp  test_barrier_post.cpp  test_buffered_channel_dispatch.cpp  test_buffered_channel_post.cpp  test_condition_mt_dispatch.cpp  test_condition_mt_post.cpp  test_condition_variable_post.cpp  test_fss_dispatch.cpp  test_fss_post.cpp  test_future_dispatch.cpp  test_future_mt_dispatch.cpp  test_future_mt_post.cpp  test_mutex_mt_dispatch.cpp  test_mutex_mt_post.cpp  test_mutex_post.cpp  test_packaged_task_dispatch.cpp  test_promise_dispatch.cpp
tests/disruptor/: CMakeLists.txt  claim_strategy_test.cc  ring_buffer_test.cc  sequence_barrier_test.cc  sequence_test.cc  sequencer_test.cc  wait_strategy_test.cc
tests/fiber/: CMakeLists.txt  test_async_dispatch.cpp  test_async_post.cpp  test_barrier_dispatch.cpp  test_condition_variable_any_dispatch.cpp  test_condition_variable_any_post.cpp  test_condition_variable_dispatch.cpp  test_fiber_dispatch.cpp  test_fiber_post.cpp  test_future_post.cpp  test_mutex_dispatch.cpp  test_packaged_task_post.cpp  test_promise_post.cpp  test_shared_future_dispatch.cpp  test_shared_future_post.cpp  test_unbuffered_channel_dispatch.cpp  test_unbuffered_channel_post.cpp
